# skops

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Makefile  README.rst  SECURITY.md  marie.sacksick@posteo.net  pyproject.toml  setup.cfg  setup.py
.github/workflows/: PULL_REQUEST_TEMPLATE.md  build-test.yml  clean-skops-user.yml  debugging.yml  deploy-model-card-creator.yml  deploy-space-creator.yml  inference-test-conditional.yml  inference-test-full.yml  inference-test-partial.yml  inference-test-unconditional.yml  inference-test.yml  persistence-performance.yml  publish-pypi.yml
.pixi/: config.toml
<function destination_path at 0x7f92a70b43b0>/: README.md
<function destination_path at 0x7f9fd47b43b0>/: README.md
<function destination_path at 0x7fb273f8e3b0>/: README.md
<function destination_path at 0x7fb50af853b0>/: README.md
<function destination_path at 0x7fcc65f843b0>/: README.md
<function destination_path at 0x7fe1837cb3b0>/: README.md
docs/: Makefile  _authors.rst  changes.rst  community.rst  conf.py  examples.rst  hf_hub.rst  index.rst  installation.rst  model_card.rst  persistence.rst  requirements.txt  roadmap.rst
docs/.funding/: floss-funding.json  funding.json
docs/examples/: hf_hub.py  plot_hf_hub.py
docs/modules/: classes.rst
examples/: README.rst  plot_california_housing.py  plot_custom_model_card.py  plot_gradio.py  plot_hf_hub.py  plot_intelex.py  plot_model_card.py  plot_tabular_regression.py  plot_text_classification.py
pip-wheel-metadata/skops-0.1.dev0.dist-info/: LICENSE  METADATA  top_level.txt
scripts/: check_file_size.py  check_persistence_performance.py  clean_skops.py
skops/: __init__.py  __main__.py  _min_dependencies.py  _persist.py  conftest.py  entrypoint.py  temporary_template.md
skops/card/: __init__.py  _card_alternative.py  _markup.py  _model_card.py  _parser.py  _templates.py  default_template.md
skops/card/tests/: test_card.py  test_card_alternative.py  test_parser.py
skops/card/tests/examples/: bert-base-uncased.md  bert-base-uncased.md.diff  clip-vit-large-patch14.md  clip-vit-large-patch14.md.diff  gpt2.md  gpt2.md.diff  specter.md  specter.md.diff  toy-example.md  toy-example.md.diff  vit-base-patch32-224-in21k.md  vit-base-patch32-224-in21k.md.diff
skops/cli/: __init__.py  _convert.py  _update.py  _utils.py  entrypoint.py
skops/cli/tests/: test_cli.py  test_cli_utils.py  test_convert.py  test_entrypoint.py  test_update.py
skops/hf_hub/: __init__.py  _hf_hub.py
skops/hf_hub/tests/: common.py  test_hf_hub.py
skops/hf_hub/tests/sample_repo/: pyproject.toml
skops/hub_utils/: __init__.py  _hf_hub.py
skops/hub_utils/tests/: common.py  test_hf_hub.py
skops/hub_utils/tests/sample_repo/: config.json
skops/io/: __init__.py  _audit.py  _cli.py  _dispatch.py  _general.py  _keras.py  _numpy.py  _persist.py  _protocol.py  _quantile_forest.py  _scikeras.py  _scipy.py  _sklearn.py  _trusted_types.py  _utils.py  _visualize.py  _xgboost.py  exceptions.py  pickle.py
skops/io/old/: _general_v0.py  _numpy_v0.py  _numpy_v1.py
skops/io/tests/: _utils.py  test_audit.py  test_cli.py  test_deprecation.py  test_external.py  test_persist.py  test_persist_old.py  test_utils.py  test_visualize.py  testing_utils.py
skops/model_card/: __init__.py  model_card.py
skops/saving_utils/: default_template.md  model_card.py
skops/tests/: test_persist.py
skops/utils/: _fixes.py  entrypoint.py  fixes.py  importutils.py
skops/utils/tests/: test_entrypoint.py  test_fixes.py  test_importutils.py
spaces/: README.md  deploy-skops-model-card-creator.py  deploy-skops-space-creator.py
spaces/skops_model_card_creator/: README.md  app.py  create.py  edit.py  gethelp.py  make-data.py  requirements.txt  start.py  utils.py
spaces/skops_space_creator/: edit.py  tasks.py  utils.py
