[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "skops/__init__.py"

[project]
name = "skops"
dynamic = ["version"]
readme = "README.rst"
description = "A set of tools, related to machine learning in production."
maintainers = [
    { name = "Adrin Jalali", email = "adrin.jalali@gmail.com" },
    { name= "Benjamin Bossan", email= "benjamin.bossan@gmail.com" },
]
requires-python = ">=3.9"
dependencies = [
    "scikit-learn>1.0",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved",
    "Programming Language :: Python",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Development Status :: 1 - Planning",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
]
license = {file = "LICENSE"}
dependencies = [
    "scikit-learn>1.1",
    "huggingface-hub>=0.17.0",
    "tabulate>=0.8.8",
    "packaging>=17.0",
]

[project.optional-dependencies]
rich = ["rich>=12"]
tests = [
    "quantile-forest>=1.0.0",
    "pytest>=7",
    "pytest-cov>=2.9.0",
    "flake8>=3.8.2",
    "types-requests>=2.28.5",
    "flaky>=3.7.0",
    # remove python constraint when catboost supports 3.13
    # https://github.com/catboost/catboost/issues/2748
    "catboost>=1.0;python_version<'3.13'",
    "rich>=12",
    "matplotlib>=3.3",
    "pandas>=1",
    "lightgbm>=3",
    "xgboost>=1.6",
]
docs = [
    "matplotlib>=3.3",
    "pandas>=1",
    "fairlearn>=0.7.0",
    "sphinx>=3.2.0",
    "sphinx-gallery>=0.7.0",
    "sphinx-rtd-theme>=1",
    "numpydoc>=1.0.0",
    "sphinx-prompt>=1.3.0",
    "sphinx-issues>=1.2.0",
]

[project.urls]
Homepage = "http://github.com/skops-dev/skops"
Documentation = "https://skops.readthedocs.io/en/stable/"
Repository = "http://github.com/skops-dev/skops"
Issues = "http://github.com/skops-dev/skops/issues"
Changelog = "https://skops.readthedocs.io/en/stable/changes.html"

[tool.black]
line-length = 88
target_version = ['py38', 'py39', 'py310', 'py311']
preview = true

[tool.ruff]
# all rules can be found here: https://beta.ruff.rs/docs/rules/
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
filterwarnings = [
    "error::DeprecationWarning",
    "error::FutureWarning",
    # TODO: remove when no longer supporting sklearn v1.0
    # numpy and scipy deprecation warnings in sklearn:
    'ignore:\n\n  \`numpy.distutils\` is deprecated since NumPy:DeprecationWarning',
    # https://github.com/scikit-learn/scikit-learn/issues/24080
    "ignore:The \\'sym_pos\\' keyword is deprecated and should be replaced:DeprecationWarning",
    # https://github.com/scikit-learn/scikit-learn/pull/23633
    "ignore:Unlike other reduction functions:FutureWarning",
    # https://github.com/scikit-learn/scikit-learn/pull/25157
    "ignore:\\w+ is deprecated. Use files\\(\\) instead:DeprecationWarning",
    # comes from fairlearn
    "ignore:DataFrame.applymap has been deprecated. Use DataFrame.map instead:FutureWarning",
    "ignore:DataFrameGroupBy.apply operated on the grouping columns.:DeprecationWarning",
    # Ignore Pandas 2.2 warning on PyArrow. It might be reverted in a later release.
    "ignore:\\s*Pyarrow will become a required dependency of pandas.*:DeprecationWarning",
    # LightGBM sklearn 1.6 deprecation warning, fixed in the next release
    "ignore:'force_all_finite' was renamed to 'ensure_all_finite' in 1.6 and will be removed in 1.8.:FutureWarning",
    # RandomForestQuantileRegressor tags deprecation warning in sklearn 1.7
    "ignore:The RandomForestQuantileRegressor or classes from which it inherits use `_get_tags` and `_more_tags`:FutureWarning",
    # ExtraTreesQuantileRegressor tags deprecation warning in sklearn 1.7
    "ignore:The ExtraTreesQuantileRegressor or classes from which it inherits use `_get_tags` and `_more_tags`:FutureWarning",
    # BaseEstimator._validate_data deprecation warning in sklearn 1.6 #TODO can be removed when a new release of quantile-forest is out
    "ignore:`BaseEstimator._validate_data` is deprecated in 1.6 and will be removed in 1.7:FutureWarning",
]
markers = [
    "network: marks tests as requiring internet (deselect with '-m \"not network\"')",
    "inference: marks tests that call inference API (deselect with '-m \"not inference\"')",
]
addopts = "--cov=skops --cov-report=term-missing --doctest-modules"

[tool.coverage.run]
omit = [
    "skops/**/test_*.py",
    "skops/_min_dependencies.py",
    "skops/conftest.py",
]

[tool.mypy]
exclude = "(\\w+/)*test_\\w+\\.py$|spaces/skops_model_card_creator|old"
ignore_missing_imports = true
no_implicit_optional = true
